# libjss

./: CMakeLists.txt  README.md
cmake/: mkpackage.cmake
include/libjss/: jss.hpp  libjssconfig.hpp  libjssglobal.hpp
src/: CMakeLists.txt  jss.cpp
tests/: CMakeLists.txt  jss_tests.cpp
